--- a/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
@@ -51,7 +51,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Cotes parall&egrave;les inclin&eacute;es</b> cr&eacute;e des cotes de coordonn&eacute;es inclin&eacute;es&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
+<p>L'outil <b>TechDraw Cotes parall&egrave;les inclin&eacute;es</b> cr&eacute;e des cotes inclin&eacute;es sur plusieurs niveaux&nbsp;: plusieurs cotes &agrave; &eacute;gale distance avec la m&ecirc;me ligne de base.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueCoordDimensionExample.png&amp;filetimestamp=20220127153632&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueCoordDimensionExample.png" decoding="async" width="400" height="257" class="mw-file-element" data-file-width="765" data-file-height="491"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
@@ -116,12 +116,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125105024
+Cached time: 20260125105247
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.133 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.112 seconds
 Preprocessor visited node count: 379/1000000
 Post&#8208;expand include size: 27154/2097152 bytes
 Template argument size: 10898/2097152 bytes
@@ -132,19 +132,19 @@ Unstrip post&#8208;expand size: 1435/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.944      1 -total
- 29.56%   12.102      1 Template:TechDraw_Tools_navi/fr
- 25.29%   10.353      2 Template:Navigation_menu_2
-  9.95%    4.075      1 Template:Value
-  9.51%    3.894      1 Template:Userdocnavi/fr
-  9.45%    3.870      1 Template:Version/fr
-  8.52%    3.489      1 Template:Caption
-  8.42%    3.449      1 Template:GuiCommand/fr
-  7.81%    3.198      3 Template:MenuCommand
-  6.52%    2.669      2 Template:Docnav/fr
+100.00%   29.210      1 -total
+ 28.73%    8.392      1 Template:TechDraw_Tools_navi/fr
+ 20.57%    6.009      2 Template:Navigation_menu_2
+ 11.78%    3.441      1 Template:Userdocnavi/fr
+ 11.15%    3.258      1 Template:Value
+  7.80%    2.279      1 Template:GuiCommand/fr
+  7.54%    2.202      2 Template:Docnav/fr
+  6.57%    1.920      1 Template:Caption
+  6.19%    1.808      1 Template:VersionMinus/fr
+  5.90%    1.723      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125105024 and revision id 1743765. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125105247 and revision id 1743767. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
