--- a/wiki/fr/TechDraw_ExtensionCreateVertCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertCoordDimension.html
@@ -51,7 +51,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Cotes parall&egrave;les verticales</b> cr&eacute;e des cotes de coordonn&eacute;es verticales&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
+<p>L'outil <b>TechDraw Cotes parall&egrave;les verticales</b> cr&eacute;e des cotes verticales sur plusieurs niveaux&nbsp;: plusieurs cotes &agrave; &eacute;gale distance avec la m&ecirc;me ligne de base.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimensionExample.png&amp;filetimestamp=20211113143123&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimensionExample.png" decoding="async" width="400" height="231" class="mw-file-element" data-file-width="762" data-file-height="440"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
@@ -113,12 +113,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125104526
+Cached time: 20260125105323
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.169 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.246 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 27194/2097152 bytes
 Template argument size: 10932/2097152 bytes
@@ -129,19 +129,19 @@ Unstrip post&#8208;expand size: 1423/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.215      1 -total
- 24.66%   12.385      1 Template:Value
- 20.96%   10.523      1 Template:Incode
- 17.26%    8.669      1 Template:TechDraw_Tools_navi/fr
- 14.46%    7.260      2 Template:Navigation_menu_2
-  9.64%    4.842      2 Template:Docnav/fr
-  8.82%    4.431      1 Template:Userdocnavi/fr
-  8.06%    4.045      1 Template:VersionMinus/fr
-  8.03%    4.030      1 Template:GuiCommand/fr
-  7.56%    3.798      1 Template:Caption
+100.00%   84.252      1 -total
+ 27.72%   23.353      1 Template:VersionMinus/fr
+ 17.95%   15.123      1 Template:Userdocnavi/fr
+ 17.39%   14.647      2 Template:Button
+  9.70%    8.172      1 Template:GuiCommand/fr
+  6.91%    5.819      1 Template:TechDraw_Tools_navi/fr
+  5.35%    4.509      2 Template:Navigation_menu_2
+  5.35%    4.508      1 Template:Value
+  4.18%    3.521      1 Template:Version/fr
+  3.73%    3.142      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277885-0!canonical and timestamp 20260125104526 and revision id 1743755. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277885-0!canonical and timestamp 20260125105322 and revision id 1743769. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
