--- a/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
@@ -52,7 +52,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Cotes parall&egrave;les horizontales</b> cr&eacute;e des cotes de coordonn&eacute;es horizontales&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
+<p>L'outil <b>TechDraw Cotes parall&egrave;les horizontales</b> cr&eacute;e des cotes horizontales sur plusieurs niveaux&nbsp;: plusieurs cotes &agrave; &eacute;gale distance avec la m&ecirc;me ligne de base.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimensionExample.png&amp;filetimestamp=20211113130345&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimensionExample.png" decoding="async" width="400" height="138" class="mw-file-element" data-file-width="1081" data-file-height="373"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
@@ -114,12 +114,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125104638
+Cached time: 20260125105350
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.145 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.150 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 27168/2097152 bytes
 Template argument size: 10918/2097152 bytes
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1637/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.621      1 -total
- 20.57%    7.532      1 Template:TechDraw_Tools_navi/fr
- 17.87%    6.544      1 Template:GuiCommand/fr
- 14.55%    5.329      2 Template:Navigation_menu_2
- 14.34%    5.251      1 Template:Caption
- 11.34%    4.152      1 Template:Userdocnavi/fr
-  7.41%    2.714      2 Template:Docnav/fr
-  6.91%    2.531      1 Template:Value
-  5.95%    2.180      1 Template:Version/fr
-  4.84%    1.774      1 Template:VersionMinus/fr
+100.00%   48.120      1 -total
+ 22.95%   11.044      1 Template:TechDraw_Tools_navi/fr
+ 15.65%    7.532      2 Template:Navigation_menu_2
+ 14.03%    6.751      1 Template:Userdocnavi/fr
+ 12.33%    5.932      2 Template:Docnav/fr
+ 10.84%    5.215      1 Template:GuiCommand/fr
+  7.55%    3.635      1 Template:VersionMinus/fr
+  6.85%    3.294      1 Template:Version/fr
+  6.24%    3.003      1 Template:Value
+  5.74%    2.761      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125104638 and revision id 1743759. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125105350 and revision id 1743771. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
