--- a/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateObliqueCoordDimension.html
@@ -58,7 +58,7 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez modifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez trois sommets ou plus.</li>
 <li>L'ordre de s&eacute;lection des deux premiers sommets d&eacute;termine la position de la ligne de base. Si le sommet s&eacute;lectionn&eacute; en premier est &agrave; gauche du second, la ligne de base est cr&eacute;&eacute;e au niveau du sommet le plus &agrave; gauche, sinon elle est cr&eacute;&eacute;e au niveau du sommet le plus &agrave; droite.</li>
 <li>Les deux premiers sommets d&eacute;finissent &eacute;galement la direction.</li>
@@ -114,12 +114,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125105508
+Cached time: 20260125105606
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.119 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.097 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 27176/2097152 bytes
 Template argument size: 10920/2097152 bytes
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1439/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.217      1 -total
- 22.43%    7.003      1 Template:TechDraw_Tools_navi/fr
- 15.81%    4.935      2 Template:Navigation_menu_2
- 15.78%    4.926      1 Template:Userdocnavi/fr
- 13.22%    4.126      1 Template:GuiCommand/fr
- 10.14%    3.167      1 Template:Value
-  9.34%    2.915      2 Template:Docnav/fr
-  7.72%    2.411      3 Template:MenuCommand
-  5.23%    1.634      1 Template:VersionMinus/fr
-  5.13%    1.603      2 Template:Button
+100.00%   21.963      1 -total
+ 27.71%    6.086      1 Template:TechDraw_Tools_navi/fr
+ 20.55%    4.513      2 Template:Navigation_menu_2
+ 13.71%    3.012      1 Template:Userdocnavi/fr
+  9.98%    2.192      1 Template:Value
+  9.23%    2.028      2 Template:Docnav/fr
+  9.02%    1.982      1 Template:GuiCommand/fr
+  6.02%    1.322      1 Template:Caption
+  5.79%    1.271      1 Template:Version/fr
+  5.40%    1.186      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125105508 and revision id 1743773. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278073-0!canonical and timestamp 20260125105606 and revision id 1743775. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
